added TC PP Legal

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 # Backend API base URL
 REACT_APP_API_URL=http://localhost:3001/api
+
+REACT_APP_RECAPTCHA_SITE_KEY=6LfBhGwUAAAAAE0AHoSQn3Mdg6LlZjfi4JeYbUJH
+
+REACT_APP_RECAPTCHA_SITE_SECRET=66LfBhGwUAAAAAMrd7smK7BiUkThqmfhq6vesDFHT
