--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Backend API base URL
-REACT_APP_API_URL=https://vtm.back.miketsak.gr/api
+REACT_APP_API_URL=http://localhost:3001/api
 
 REACT_APP_RECAPTCHA_SITE_KEY=6LfBhGwUAAAAAE0AHoSQn3Mdg6LlZjfi4JeYbUJH
 
