--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
+  "id": "/?app=erebus-portal",
+  "name": "Erebus Portal Portal",
+  "short_name": "Erebus",
+  "description": "Erebus Portal for the Athens Thought-Time LARP. Create characters, manage downtimes, and navigate the court.",
+  "lang": "en",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "background_color": "#111111",
+  "theme_color": "#8a0f1a",
+  "icons": [
+    { "src": "/icons/icon-192.png",      "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/icon-512.png",      "sizes": "512x512", "type": "image/png" },
+    { "src": "/icons/maskable-192.png",  "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
+    { "src": "/icons/maskable-512.png",  "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+  ]
 }
