--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
+    "web-push": "^3.6.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
