--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "id": "/?app=erebus-portal",
-  "name": "Erebus Portal Portal",
+  "id": "/erebus-portal",
+  "name": "Erebus Portal",
   "short_name": "Erebus",
-  "description": "Erebus Portal for the Athens Thought-Time LARP. Create characters, manage downtimes, and navigate the court.",
+  "description": "Erebus Portal for the Athens Through-Time LARP. Create characters, manage downtimes, and navigate the court.",
   "lang": "en",
   "start_url": "/",
   "scope": "/",
@@ -11,9 +11,9 @@
   "background_color": "#111111",
   "theme_color": "#8a0f1a",
   "icons": [
-    { "src": "/icons/icon-192.png",      "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512.png",      "sizes": "512x512", "type": "image/png" },
-    { "src": "/icons/maskable-192.png",  "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
-    { "src": "/icons/maskable-512.png",  "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "/icons/maskable-192.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
+    { "src": "/icons/maskable-512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
   ]
 }
