--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://portal.attlarp.gr",
   "dependencies": {
     "@google/genai": "^1.38.0",
     "@testing-library/dom": "^10.4.1",
