--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,9 +11,7 @@
   "background_color": "#111111",
   "theme_color": "#8a0f1a",
   "icons": [
-    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "/icons/maskable-192.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable" },
-    { "src": "/icons/maskable-512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "img/ATT-logo(1).png", "sizes": "192x192", "type": "image/png" },
+    { "src": "img/ATT-logo(1).png", "sizes": "512x512", "type": "image/png" }
   ]
 }
